[package]
name = "agent-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = "0.6"
libsql = "0.9"
memory-core = { path = "../memory-core" }
memory-imagination = { path = "../memory-imagination" }
memory-ingest = { path = "../memory-ingest" }
memory-lessons = { path = "../memory-lessons" }
memory-personality = { path = "../memory-personality" }
memory-retrieval = { path = "../memory-retrieval" }
memory-sleep = { path = "../memory-sleep" }
memory-store = { path = "../memory-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
uuid = "1"

[lints]
workspace = true
