[package]
name = "memory-sleep"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4"
memory-core = { path = "../memory-core" }
memory-lessons = { path = "../memory-lessons" }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
