[package]
name = "memory-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
libsql = "0.9"
memory-core = { path = "../memory-core" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
