[package]
name = "memory-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4"
libsql = "0.9"
memory-core = { path = "../memory-core" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
