[package]
name = "nodamem-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
memory-store = { path = "../memory-store" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
